<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nikname_string"
        android:paddingTop="@dimen/padding_20"
        android:paddingBottom="@dimen/padding_20"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:background="@color/reg_container"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textsize_16"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:layout_below="@+id/txt">

        <EditText
            android:id="@id/id_nikname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nikname"
            android:textAllCaps="false"
            android:text=""
            android:lines="1"
            android:textSize="@dimen/text_small"
            android:inputType="textCapWords"/>
    </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_below="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/reg_container"
            android:text="@string/register2_message"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_small"
            android:padding="@dimen/activity_vertical_margin"
            android:id="@+id/textView"
            android:gravity="center"/>

    <TextView
        android:id="@id/actiongender"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/action_gender"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:layout_alignTop="@+id/radio_group"
        android:layout_alignBottom="@+id/radio_group"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:layout_below="@+id/textView">

        <RadioButton
            android:id="@+id/action_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"/>

        <RadioButton
            android:id="@+id/action_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"/>
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lin_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actiongender"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <EditText
            android:id="@id/id_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_firstname"
            android:textSize="@dimen/text_small"
            android:lines="1"
            android:inputType="textCapWords"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lin_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:layout_below="@+id/lin_1">

        <EditText
            android:id="@id/id_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lastname"
            android:textSize="@dimen/text_small"
            android:lines="1"
            android:inputType="textCapWords"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/lin_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_2"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <AutoCompleteTextView
            android:id="@id/id_workplace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_workplace"
            android:lines="1"
            android:textSize="@dimen/text_small"
            android:inputType="textCapWords"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/lin_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_3"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <AutoCompleteTextView
            android:id="@id/id_homeplace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_homeplace"
            android:lines="1"
            android:textSize="@dimen/text_small"
            android:inputType="textCapWords"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/lin_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_4"
        android:layout_marginBottom="@dimen/margin_10"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <EditText
            android:id="@id/id_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_birth"
            android:lines="1"
            android:focusable="false"
            android:editable="false"
            android:textSize="@dimen/text_small"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/register2"
        android:layout_width="@dimen/reg_button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="Submit"
        android:textAllCaps="false"
        android:layout_below="@+id/lin_5"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:background="@drawable/reg_button_rect_shape"/>


    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>