<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@id/id_card_business_name"
            android:text="@string/business_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@id/id_card_business_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_alignLeft="@id/id_card_business_name"
            android:layout_below="@id/id_card_business_name"
            android:text="@string/business_address"
            android:textSize="16sp"/>

        <android.support.v7.widget.AppCompatRatingBar
            android:id="@id/id_card_business_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/id_card_business_name"
            android:rating="3"
            android:stepSize="0.02"
            android:numStars="5"
            android:layout_marginTop="5dp"
            android:layout_below="@id/id_card_business_address"
            style="@style/AppTheme.RatingBar"/>

        <TextView
            android:id="@id/id_card_business_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/id_card_business_rating"
            android:layout_below="@id/id_card_business_address"
            android:textSize="12sp"/>

        <TextView
            android:id="@id/id_seperator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_500"
            android:alpha=".5"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_below="@id/id_card_business_review"/>


    </RelativeLayout>

</android.support.v7.widget.CardView>